Realización de contenedor de dependencias

--- a/MasterNet.WebApi/appsettings.json
+++ b/MasterNet.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlLiteDatabase": "Data Source=LocalDatabase.db"
+  },
   "AllowedHosts": "*"
 }
