Creación de reporte Excel, midddleware y result generico

--- a/MasterNet.WebApi/MasterNet.WebApi.csproj
+++ b/MasterNet.WebApi/MasterNet.WebApi.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MasterNet.Application\MasterNet.Application.csproj" />
     <ProjectReference Include="..\MasterNet.Domain\MasterNet.Domain.csproj" />
+    <ProjectReference Include="..\MasterNet.Infrastructure\MasterNet.Infrastructure.csproj" />
     <ProjectReference Include="..\MasterNet.Persistence\MasterNet.Persistence.csproj" />
   </ItemGroup>
 
